--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -700,6 +700,7 @@ mapDir.changed.noneAscii=We detected you have a username with special characters
 mapDir.changed.unix=We detected you have a unix system and moved your vault directory to fallback location.
 mapDir.changed.oneDrive=We detected you use OneDrive for your documents and moved your vault directory to fallback location.
 settings.use.secondaryVaultLocation=Use Fallback vault location. You want to use this if map/mod downloading has issues and the game does not find maps/mods.
+settings.use.memoryBar=Show memory usage
 help.title=Links Overview
 linksTecHelpDiscord=Technical help on Discord
 linksTecHelpForum=Technical help on forum
@@ -709,3 +710,4 @@ linksDiscord=Discord
 linksFacebook=Facebook
 linksDevNews=Dev Blog
 linksYoutube=YouTube
+warning.memoryLeak=Your client is running out of memory please report this. It will likely crash soon.
