--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -700,6 +700,7 @@ mapDir.changed.noneAscii=We detected you have a username with special characters
 mapDir.changed.unix=We detected you have a unix system and moved your vault directory to fallback location.
 mapDir.changed.oneDrive=We detected you use OneDrive for your documents and moved your vault directory to fallback location.
 settings.use.secondaryVaultLocation=Use Fallback vault location. You want to use this if map/mod downloading has issues and the game does not find maps/mods.
+settings.use.advancedIceLog=Write an into an extra file advanced information about the ice adapter.
 help.title=Links Overview
 linksTecHelpDiscord=Technical help on Discord
 linksTecHelpForum=Technical help on forum
