react to lobby kick / close game request from server

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -730,4 +730,8 @@ linksDiscord=Discord
 linksFacebook=Facebook
 linksDevNews=Dev Blog
 linksYoutube=YouTube
+server.kicked.title=You were kicked
+server.kicked.message=You were kicked from FAF by a moderator. Please refer to our rules for the lobby/game here {0}.
+game.kicked.title=You were kicked from the game
+game.kicked.message=Your game was closed by a moderator. Please refer to our rules for the lobby/game here {0}.
 gameQuality.undefined=-
