Fix game quality label
Fixes #1478

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -671,10 +671,10 @@ userInfo.friend=This player is your friend
 replay.notFoundTitle=Could not find game
 replay.replayNotFoundText=Could not find the game with id "{0}".
 settings.notifications.afterGameReview=After game review
-
-chat.userContext.reason=reason for ban
-chat.userContext.duration=duration for ban
-chat.userContext.success=sucessfully banned
+moderator.ban.reason=reason for ban
+moderator.ban.duration=duration for ban
+moderator.ban.success=sucessfully kicked and banned
+moderator.ban.user=Ban user "{0}":
 
 tournament.name=Name
 tournament.status.finished=Finished
