Opt in beta Fixes #1458

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -410,6 +410,7 @@ updater.downloadingFile=Downloading {0}
 updater.patchingFile=Patching {0}
 
 clientUpdateAvailable.notification=Client {0} is available ({1})
+clientUpdateAvailable.prereleaseNotification=Prerelease {0} is available ({1})
 clientUpdateAvailable.downloadAndInstall=Download
 clientUpdateAvailable.releaseNotes=Release notes
 
@@ -507,8 +508,11 @@ settings.languages.restart.message=You changed the language. This requires a res
 settings.languages.restart=Restart
 settings.languages.system=Auto
 settings.time.system=Auto
+settings.checkForPrerelease=Check for prerelease
 settings.time.12=12h
 settings.time.24=24h
+settings.prereleaseFeedback=Give feedback for predeceases on discord
+settings.giveFeedback=Open
 settings.windowTitle=Settings
 settings.general=General
 settings.language=Language
