Add sorting tiles by average rating (fixes #1399)

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -196,7 +196,8 @@ game.rehost.failed=Rehosting game failed.
 game.title=Title
 game.players=Players
 game.map=Map
-game.rating=Rating
+game.ratingRange=Rating Range
+game.averageRating=Ø Rating
 game.ratingFormat.minOnly=>={0,number,#}
 game.ratingFormat.maxOnly=<={0,number,#}
 game.ratingFormat.minMax={0,number,#} - {1,number,#}
@@ -639,6 +640,8 @@ game.notValid=The Game was not rated
 game.notRatedYet=Rating change is not yet available
 game.ended=Did you enjoy "{0}"? Let other people know!
 game.rate=Rate it now
+tiles.comparator.averageRatingDescending=Sort by Average Rating Descending
+tiles.comparator.averageRatingAscending=Sort by Average Rating Ascending
 tiles.comparator.playersDescending=Sort by Players Descending
 tiles.comparator.playersAscending=Sort by Players Ascending
 tiles.comparator.nameDescending=Sort by Names Descending
