Added handling for new `authentication_failed` messages

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -292,6 +292,9 @@ login.replayServerHost=Replay server host
 login.ircServerHost=IRC server host
 login.apiBaseUrl=API base URL
 login.withEmailWarning=Please login with your username and not your email.
+login.failedError=Login failed for an unknown reason.
+login.deniedError=Login not found or password incorrect. They are case sensitive.
+login.steamLinkError=Unfortunately, you must currently link your account to Steam in order to play Forged Alliance Forever. You can do so on {0}.
 
 vault.maps=Maps
 vault.mods=Mods
