Added policy server response messages

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -295,6 +295,10 @@ login.withEmailWarning=Please login with your username and not your email.
 login.failedError=Login failed for an unknown reason.
 login.deniedError=Login not found or password incorrect. They are case sensitive.
 login.steamLinkError=Unfortunately, you must currently link your account to Steam in order to play Forged Alliance Forever. You can do so on {0}.
+login.policyError=Login failed due to a policy violation: '{0}'. Please contact an admin or moderator on the forums if you feel this is a false positive.
+login.policyVMError=Your computer seems to be a virtual machine.\n\nIn order to log in from a VM, you have to link your account to Steam: {0}. If you need an exception, please contact an admin or moderator on the forums.
+login.policyAssociatedError=Your computer is already associated with another FAF account.\n\nIn order to log in with an additional account, you have to link it to Steam: {0}.\nIf you need an exception, please contact an admin or moderator on the forums.
+login.policyFraudulentError=Fraudulent login attempt detected. As a precautionary measure, your account has been banned permanently. Please contact an admin or moderator on the forums if you feel this is a false positive.
 
 vault.maps=Maps
 vault.mods=Mods
