Add tooltips to replay detail labels

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -621,7 +621,7 @@ reviewScore.four=4
 reviewScore.three=3
 reviewScore.two=2
 reviewScore.one=1
-settings.chat.notifyOnAtMentionOnly=Only notify when mentioned via @username. 
+settings.chat.notifyOnAtMentionOnly=Only notify when mentioned via @username.
 settings.chat.notifications=Notifications
 mod.displayName=Name
 mod.author=Author
@@ -635,6 +635,14 @@ mod.filename=Filename
 mod.version=Version
 UIDNotExecuted=UID binary could not be executed. It might have been removed, not found or inaccessible.
 replay.copyUrl=Copy replay URL
+replay.dateTooltip=Start date
+replay.timeTooltip=Start time
+replay.modTooltip=Featured mod
+replay.durationTooltip=Real time
+replay.replayDurationTooltip=Replay length
+replay.playerCountTooltip=Players
+replay.ratingTooltip=Average rating
+replay.qualityTooltip=Game quality
 game.showRatingChange=Show rating change
 game.notValid=The Game was not rated
 game.notRatedYet=Rating change is not yet available
