Ask whether to proceed if map missing
Fixes #1246

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -746,3 +746,7 @@ server.kicked.message=You were kicked from FAF by a moderator. Please refer to o
 game.kicked.title=You were kicked from the game
 game.kicked.message=Your game was closed by a moderator. Please refer to our rules for the lobby/game here {0}.
 gameQuality.undefined=-
+replay.ignoreMapNotFound=Ignore and start replay
+replay.abortAfterMapNotFound=Abort and show more info
+replay.mapDownloadFailed=Map download failed for this replay
+replay.mapDownloadFailed.wannaContinue=We could not find the map mentioned in the replay file. However the game might still know where to find it. Consider this as a warning, that this replay might be broken.
