Improvements and fixes to local replay vault

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -748,6 +748,7 @@ server.kicked.message=You were kicked from FAF by a moderator. Please refer to o
 game.kicked.title=You were kicked from the game
 game.kicked.message=Your game was closed by a moderator. Please refer to our rules for the lobby/game here {0}.
 gameQuality.undefined=-
+map.unknown=unknown
 replay.ignoreMapNotFound=Ignore and start replay
 replay.abortAfterMapNotFound=Abort and show more info
 replay.mapDownloadFailed=Map download failed for this replay
