--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -512,7 +512,7 @@ settings.time.system=Auto
 settings.checkForPrerelease=Check for prerelease
 settings.time.12=12h
 settings.time.24=24h
-settings.prereleaseFeedback=Give feedback for predeceases on discord
+settings.prereleaseFeedback=Give feedback for prereleases on discord
 settings.giveFeedback=Open
 settings.windowTitle=Settings
 settings.general=General
