Added vault/mods filtering by uploader's login

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -625,6 +625,7 @@ settings.chat.notifyOnAtMentionOnly=Only notify when mentioned via @username.
 settings.chat.notifications=Notifications
 mod.displayName=Name
 mod.author=Author
+mod.uploader.login=Uploader
 mod.uploadedDateTime=Uploaded
 mod.updatedDateTime=Updated
 mod.id=ID
