--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -539,6 +539,7 @@ settings.chat.notifyOnAtMentionOnly = Nur benachrichtigen, wenn erwähnt mit @us
 settings.chat.notifications = Benachrichtigungen
 mod.displayName = Name
 mod.author = Autor
+mod.uploader.login=Uploader
 # "Hinzugefügt" doesn't mean "Uploaded" but "Added".
 mod.uploadedDateTime = Hinzugefügt
 mod.updatedDateTime = Aktualisiert
