--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -551,6 +551,7 @@ settings.chat.notifyOnAtMentionOnly = Notifier uniquement lors d'une mention @
 settings.chat.notifications = Notifications
 mod.displayName = Nom
 mod.author=Conception
+mod.uploader.login=Uploader
 mod.uploadedDateTime = Envoyé
 mod.updatedDateTime = Mis à jour
 mod.id = ID
