--- a/src/main/resources/i18n/messages_nl.properties
+++ b/src/main/resources/i18n/messages_nl.properties
@@ -531,6 +531,7 @@ settings.chat.notifyOnAtMentionOnly=Maak het alleen aan mij bekend via @username
 settings.chat.notifications=Notificaties
 mod.displayName=Naam
 mod.author=Auteur
+mod.uploader.login=Uploader
 mod.uploadedDateTime=Upgeload
 mod.updatedDateTime=Aangepast
 mod.id=ID
