--- a/src/main/resources/i18n/messages_pl.properties
+++ b/src/main/resources/i18n/messages_pl.properties
@@ -543,6 +543,7 @@ settings.chat.notifyOnAtMentionOnly=Tylko powiadom na wzmiankę o @username.
 settings.chat.notifications=Powiadomienia
 mod.displayName=Nazwa
 mod.author=Autor
+mod.uploader.login=Przesyłający
 mod.uploadedDateTime=Wstawiony
 mod.updatedDateTime=Aktualizowany
 mod.id=ID
