--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -309,6 +309,7 @@ mapVault.uninstall = Удалить
 mod.description = Описание
 mod.comments = Комментарии
 map.author = Автор
+mod.uploader.login= Загрузивший
 map.unknownAuthor = Неизвестный автор
 map.name = Имя
 map.description = Описание
