Change 'Game quality' tooltip to 'Quality'

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -642,9 +642,9 @@ replay.durationTooltip=Real time
 replay.replayDurationTooltip=Replay length
 replay.playerCountTooltip=Players
 replay.ratingTooltip=Average rating
-replay.qualityTooltip=Game quality
+replay.qualityTooltip=Quality
 game.showRatingChange=Show rating change
-game.notValid=The Game was not rated
+game.notValid=The game was not rated
 game.notRatedYet=Rating change is not yet available
 game.ended=Did you enjoy "{0}"? Let other people know!
 game.rate=Rate it now
