--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -348,6 +348,7 @@ mapVault.upload.playersFormat={0,number,#}
 mapVault.upload.rankedConfirm=I confirm that this map is properly balanced and does not contain prohibited code. I'm aware that a violation results in a ban. Unchecking this results in an unranked map.
 mapVault.upload.rules=I confirm that I have read the rules concerning map upload.
 mapVault.upload.openRules=Show rules
+mapVault.upload.openValidation=Validate metadata
 mapVault.upload.retry=Retry
 mapVault.loadingMaps=Loading maps…
 mapVault.recommended=M&M Team Top Picks
