--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -183,28 +183,29 @@ game.host = Host
 game.tooltip.teamTitle = Team {0} ({1,number,\#})
 game.tooltip.teamTitleNoTeam = Kein Team
 game.tooltip.observers = Zuschauer
-game.protected.symbol = uF023
 game.join.passwordPrompt = Passwort eingeben
-game.join.passwordWrong = Falsches Passwort
-game.start.couldNotStart = Das Spiel konnte nicht gestartet werden. Siehe Fehlermeldung unten.
-game.full = Spiel ist voll
-game.full.action = Klicke um das Spiel zu öffnen
-game.mods.twoAndMore = {0} und {1,number,\#} weitere
-game.gameStatus = Spielstatus
+game.join.passwordWrong=Falsches Passwort
+game.start.couldNotStart=Das Spiel konnte nicht gestartet werden. Siehe Fehlermeldung unten.
+game.full=Spiel ist voll
+game.full.action=Klicke um das Spiel zu öffnen
+game.mods.twoAndMore={0} und {1,number,\#} weitere
+game.gameStatus=Spielstatus
 # What does this mean exactly? Game is in progress?
-game.gameStatus.playing = Spielt
-game.gameStatus.lobby = Wartet, bis das Spiel startet
-game.gameStatus.none = Keiner
-game.time = Wann
-game.duration = Dauer
-game.gameType = Spieltyp
-game.startTime = Startzeit
-game.endTime = Endzeit
-game.validity = Gültigkeit
-game.victoryCondition = Siegesbedingung
-game.player.id = Spieler-ID
-game.player.username = Name des Spielers
-game.player.faction = Fraktion des Spielers
+game.gameStatus.playing=Spielt
+game.gameStatus.lobby=Wartet, bis das Spiel startet
+game.gameStatus.none=Keiner
+# Fuzzy
+game.id=Spiel UID
+game.time=Wann
+game.duration=Dauer
+game.gameType=Spieltyp
+game.startTime=Startzeit
+game.endTime=Endzeit
+game.validity=Gültigkeit
+game.victoryCondition=Siegesbedingung
+game.player.id=Spieler-ID
+game.player.username=Name des Spielers
+game.player.faction=Fraktion des Spielers
 game.player.team = Team des Spielers
 game.player.startSpot = Startposition des Spielers
 game.player.score = Punktezahl des Spielers
@@ -396,10 +397,10 @@ duration.seconds = {0,number,\#}s
 duration.minutesSeconds = {0,number,\#}min {0,number,\#}s
 duration.hourMinutes = {0,number,\#}h {0,number,\#}min
 # suppress inspection "TrailingSpacesInProperty"
-vsSeparator = u0020vsu0020
+vsSeparator=\ vs 
 # suppress inspection "TrailingSpacesInProperty"
-textSeparator = ,u0020
-secondsAgo = Vor {0,number,\#} Sekunden
+textSeparator=, 
+secondsAgo=Vor {0,number,\#} Sekunden
 minuteAgo = Vor {0,number,\#} Minute
 minutesAgo = Vor {0,number,\#} Minuten
 hourAgo = Vor {0,number,\#} Stunde
@@ -574,8 +575,9 @@ gameChosen.couldNotLocatedGame = Das gewählte Verzeichnis beinhaltet keine gül
 userInfo.statistics.errorLoading = Konnte Statistiken nicht laden
 settings.general.unitDatabase = Unit database
 unitDatabase.rackover = Rackover
-unitDatabase.spooky = Spooky
-mapVault.ladder = Ladder maps
+unitDatabase.spooky=Spooky
+game.player.rating=Eins der Spieler-Ratings
+mapVault.ladder=Ladder maps
 news.showLadderMaps = Zeige mir 1v1 Karten
 ranked1v1.showMaps = Zeige mir 1v1 Karten
 # There is this "port" and another "settings.fa.gamePort". What's the difference?
@@ -588,7 +590,7 @@ chat.userContext.copyUsername = Kopiere Benutzernamen
 userInfo.idleTimeFormat = Zuletzt gesehen\: {0}
 map.playCount = Anzahl Spiele
 # Bin persönlich der Meinung, dass gewisse Begriffe nicht übersetzt werden sollten/müssen.
-# Kann auch `Heruntergeladen` sein, allerdings ist Downloads simpler und besser meiner Meinung nach.
+# # Kann auch `Heruntergeladen` sein, allerdings ist Downloads simpler und besser meiner Meinung nach.
 # Fuzzy
 map.numberOfDownloads = Downloads
 # @downlord muss dieses Feld übersetzt werden?
@@ -616,13 +618,132 @@ tournament.status.openForRegistration = Offen
 # Fuzzy
 tournament.status.closedForRegistration = Registrierung abgeschlossen
 tournament.noStartingDate = Beginn unbekannt
-tournament.noCompletionDate = Nicht abgeschlossen
-loading = Lädt...
-updater.readingFileList = Lese Dateiliste
-secondAgo = Vor {0,number,\#}  Sekunden
+tournament.noCompletionDate=Nicht abgeschlossen
+loading=Lädt...
+updater.readingFileList=Lese Dateiliste
+secondAgo=Vor {0,number,\#}  Sekunden
 # Wie nennen wir Maps auf Deutsch?
-vault.maps.searchError = Karten konnten nicht geladen werden
-settings.notifications.displayNotification = Zeige Benachrichtigung
-replay.notFoundTitle = Könnte Spiel nicht finden
-replay.replayNotFoundText = Könnte Spiel mit id "{0}" nicht finden.
-settings.notifications.afterGameReview = Review nach Spiel
+vault.maps.searchError=Karten konnten nicht geladen werden
+settings.notifications.displayNotification=Zeige Benachrichtigung
+replay.notFoundTitle=Könnte Spiel nicht finden
+replay.replayNotFoundText=Könnte Spiel mit id "{0}" nicht finden.
+settings.notifications.afterGameReview=Review nach Spiel
+tournament.openOnChallonge=Auf challo
+# Fuzzy
+tournament.gameType=Spieltyp\:
+tournament.startingAt=Beginnt\:
+tournament.completedAt=Endet\:
+mapVault.owned=Eigene Karten
+map.hidden=Versteckt
+map.hide=Verstecken
+map.unrank=Als ungewertet markieren
+map.couldNotHide=Konnte Karte nicht verstecken.
+map.couldNotUnrank=Konnte Map nicht als ungewertet markieren.
+modVersion.ranked=Gewertet
+game.missionName=Mission
+settings.appearance.backgoundImage=Hintergrundbild
+settings.appearance.useDefaultImage=Benutze Standardbild
+settings.appearance.chooseImage=Wähle ein Bild
+settings.general.theme.useNoImage=Kein Bild
+query.notContains=beinhaltet nicht
+coop.unknownMission=Unbekannt Mission
+game.couldNotJoin=Konnte Spiel mit id ''{0}'' nicht beitreten.
+discord.disallowJoins=Verbieten Spielern über Discord deinem Spiel beizutreten.
+replay.couldNotOpen=Replay mit id ''{0}'' konnte nicht geöffnet werden.
+view.showSidePane=Zeige Details
+view.hideSidePane=Verstecke Details
+menu.revealReplayFolder=Öffne Replay Ordner
+menu.revealGamePrefsFile=Öffne game.pref Ordner
+ranked1v1.queuePopTimer=Paare in {0,number,0}\:{1,number,00}
+game.create.generatedMap=Generiere Karte
+game.avgRating.format={0,number,\#}
+game.mapGeneration.notification.title=Karte wird generiert...
+game.mapGeneration.notification.message=Bitte warten. (Version\: {0}, Seed\: {1})
+game.mapGeneration.failed.title=Konnte Karte nicht generieren
+game.mapGeneration.failed.message=Die Generierung der zufälligen Karte ist fehlgeschlagen. Das Programm zur Generierung wird beendet.(timeout)
+game.mapGeneration.downloadGenerator.title=Lade Karten Generator {0} herunter
+game.mapGeneration.generateMap.title=Generiere Karte... (Version\: {0}, Seed\: {1})
+login.environment=Serverumgebung
+login.button.downloadUpdate=Neuste Version herunter laden
+login.button.downloadPreparing=Bereite Download vor
+login.button.downloadProgress=Fortschritt\: {0,number,0%}
+login.clientTooOldError=Die Version {0} ist zu alt, du brauchst mindestens Version {1} um dich einzuloggen. Bitte lade die aktuellste Version.
+login.ircServerHost=IRC Server Adresse
+login.withEmailWarning=Bitte logge dich mit Email und Nutzername ein.
+vault.next=Weiter
+vault.previous=Zurück
+vault.currentPage=Seite\: {0,number,\#}
+mapVault.recommended=M&M Team Favoriten
+settings.appearance.useNone=Kein Bild
+settings.chat.addAutoJoinChannel=Kanal hinzufügen
+settings.chat.removeAutoJoinChannel=Entfernen
+settings.chat.autoJoinChannelList=Beizutretende Kanäle
+settings.chat.autoJoinChannelPrompt=Kanal zum Beitreten (\#kanal_name)
+settings.fa.forceRelay=Erzwinge "relay" Verbinung
+game.player.globalRating=Das globale Rating eines Spielers
+game.player.ladderRating=Das 1v1 Rating eines Spielers
+userInfo.foe=Dieser Spieler ist ihr Feind.
+userInfo.friend=Dieser Spieler ist ihr Freund.
+error.game.notTerminatedCorrectly=Einige Dateien konnten nicht kopiert werden. Das kann passieren, wir starten dein Spiel trotzdem für dich.
+map.id=\#{0}
+mapGenerator.generationFailed=Es gab einen Fehler während der Kartengenerierung
+revert.alreadySymlinked=Mach dies Rückgängig
+mapDir.changed.noneAscii=Wir haben bemerkt, dass die einen Nutzernamen mit speziellen Buchstaben hast, deine Vault würde verschoben.
+mapDir.changed.unix=Du benutzt ein Unix System. Wir haben desswegen deine Vault verschoben.
+mapDir.changed.oneDrive=Du benutzt OneDrive. Wir haben desswegen deine Vault verschoben.
+settings.use.secondaryVaultLocation=Benutzte einen alternativen Ort für Karten und Mods. Dies hilft ggf. wenn das Spiel eine Karten und Mods nicht finden kann.
+help.title=Linksammelung
+linksTecHelpDiscord=Hilfe auf Discord
+linksTecHelpForum=Hilfe im Forum
+linksRules=Regeln
+linksModerationReport=Moderationsforumlar
+linksDiscord=Discord
+linksFacebook=Facebook
+linksDevNews=Dev Blog
+linksYoutube=YouTube
+settings.use.advancedIceLog=Extra Logs für den Ice-Adapter.
+mapVault.upload.rules=Ich habe die Regeln bezüglich des Kartenuploads gelesen.
+mapVault.upload.openRules=Zeige Regeln
+gameQuality.undefined=-
+chat.userContext.kickGame=Von Spiel entfernen...
+chat.userContext.kickLobby=Aus der Lobby entfernen...
+moderator.ban.reason=Grund des Banns
+moderator.ban.duration=Dauer des Banns
+moderator.ban.success=Erfolgreich entfernt und gebannt
+moderator.ban.user=Banne Nutzer "{0}"\:
+main.tutorials=Lernen
+tutorial.category=Kategorie
+tutorial.tutorial=Tutorials
+tutorial.launch=Tutorials starten
+tutorial.mapName=Kartenname\: {0}
+tutorial.launchFailed=Feheler beim Tutorials starten
+mapVault.installationFailed=Das Installieren der Karte ''{0}'' ist fehlgeschlagen\: ''{1}''
+tutorial.loading=Tutorials laden
+tutorial.noneAvailable=Es gibt zur Zeit keine Tutorials
+clientUpdateAvailable.prereleaseNotification=Prerelease {0} is available ({1})
+settings.checkForPrerelease=Auf vorläufige Versionen prüfen
+settings.prereleaseFeedback=Feedback zu vorläufigen Versionen geben (Discord)
+settings.giveFeedback=Öffnen
+server.kicked.title=Du wurdest vom Server entfernt
+server.kicked.message=Du wurdest von einem Admin vom Server entfernt. Bitte halte dich an die Regeln\: {0}
+game.kicked.title=Du wurdest vom Spiel entfernt
+game.kicked.message=Du wurdest von einem Admin vom Spiel entfernt. Bitte halte dich an die Regeln\: {0}
+game.ratingRange=Ratingbereich
+game.averageRating=Ø Rating
+tiles.comparator.averageRatingDescending=Sortiere nach Durchschnittsrating absteigend
+tiles.comparator.averageRatingAscending=Sortiere nach Durchschnittsrating aufsteigend
+replay.dateTooltip=Startdatum
+replay.timeTooltip=Startzeit
+replay.modTooltip=Featured mod
+replay.durationTooltip=Echtzeit
+replay.replayDurationTooltip=Replaylänge
+replay.playerCountTooltip=Spieler
+replay.ratingTooltip=Durchschnittliches Rating
+replay.qualityTooltip=Qualität
+mod.uploader.login=Hochgeladen von
+mapVault.upload.openValidation=Überprüfe Kartendaten
+replay.ignoreMapNotFound=Ignorieren und starten
+replay.abortAfterMapNotFound=Abbrechen und mehr Information
+replay.mapDownloadFailed=Karten laden fehlgeschlagen für dieses Replay
+replay.mapDownloadFailed.wannaContinue=Wir konnten die passende Karte zu diesem Replay nicht finden. Dies ist lediglich eine Warnung, die kannst trotzdem versuchen das Replay zu starten.
+map.unknown=unbekannt
