--- a/src/main/resources/i18n/messages_cs.properties
+++ b/src/main/resources/i18n/messages_cs.properties
@@ -192,9 +192,9 @@ game.mods.twoAndMore = {0} a {1,number,\#} více
 game.gameStatus = Stav hry
 game.gameStatus.playing = Hraje
 game.gameStatus.lobby = Čekání na spuštění hry
-game.gameStatus.none = Žádný
+game.gameStatus.none=Žádný
 game.id=ID
-game.time = Kdy
+game.time=Kdy
 game.duration = Délka
 game.gameType = Typ hry
 game.startTime = Čas začátku
@@ -565,9 +565,9 @@ gameChosen.couldNotLocatedGame = Vybraná cesta neobsajuje platnou instalaci Sup
 userInfo.statistics.errorLoading = Nelze načíst statistiky
 settings.general.unitDatabase = Databáze jednotek
 unitDatabase.rackover = Rackover
-unitDatabase.spooky = Spooky
+unitDatabase.spooky=Spooky
 game.player.rating=Jeden z hráčových ratingů
-mapVault.ladder = Ladder mapy
+mapVault.ladder=Ladder mapy
 news.showLadderMaps = Ukázat Ladder mapy
 ranked1v1.showMaps = Ukázat ladder mapy
 port = Port
@@ -601,19 +601,21 @@ tournament.status.running = Probíhající
 tournament.status.openForRegistration = Otevřené
 tournament.status.closedForRegistration = Uzavřené
 tournament.noStartingDate = Nestanoveno datum zahájení
-tournament.noCompletionDate = ještě nedokončen
-loading = Načítání...
+tournament.noCompletionDate=ještě nedokončen
+loading=Načítání...
 # Could I have a little more context to this, where its used?
-secondAgo = před {0,number,\#} sekundy
-vault.maps.searchError = Mapy nešly načíst
-settings.notifications.displayNotification = Zobrazit oznámení
-replay.notFoundTitle = Nelze nalézt hru
-replay.replayNotFoundText = Nelze nalézt hru s ID "{0}"
-settings.notifications.afterGameReview = Pozápasová recenze
+updater.readingFileList=Čtetí souborů
+secondAgo=před {0,number,\#} sekundy
+vault.maps.searchError=Mapy nešly načíst
+settings.notifications.displayNotification=Zobrazit oznámení
+replay.notFoundTitle=Nelze nalézt hru
+replay.replayNotFoundText=Nelze nalézt hru s ID "{0}"
+settings.notifications.afterGameReview=Pozápasová recenze
 tournament.openOnChallonge=Otevřít na challonge.com
 tournament.gameType=Typ hry\:
 tournament.startingAt=Začíná v\:
 tournament.completedAt=Dokončeno v\:
+mapVault.owned=Moje mapy
 map.hidden=Schované
 map.hide=Schovat
 map.couldNotHide=Mapu nešlo schovat.
@@ -622,5 +624,72 @@ settings.appearance.backgoundImage=Obrázek na pozadí
 settings.appearance.useDefaultImage=Použít výchozí obrázek
 settings.appearance.chooseImage=Vybrat obrázek
 settings.general.theme.useNoImage=Žádný obrázek
+query.notContains=neobsahuje
 coop.unknownMission=Neznámá mise
 game.couldNotJoin=Nelze se připojit do hry s id ''{0}''.
+replay.couldNotOpen=Záznam hry číslo\: "{0}" , nelze otevřít.
+view.showSidePane=Více detailů
+view.hideSidePane=Méně detailů
+menu.revealReplayFolder=Otevřít složku se záznamy
+menu.revealGamePrefsFile=Otevřít složku s game.prefs souborem
+game.create.generatedMap=Vytvořit mapu
+game.avgRating.format={0,number,\#}
+game.mapGeneration.notification.title=Vytváření mapy
+game.mapGeneration.notification.message=Čekej prosím. (Verze\: {0}, Seed\: {1})
+game.mapGeneration.failed.title=Vytváření mapy selhalo.
+game.mapGeneration.downloadGenerator.title=Stahování verze generátoru map {0}
+game.mapGeneration.generateMap.title=Vytváření mapy... (Verze\: {0}, Seed\: {1})
+login.environment=Prostředí
+login.button.downloadUpdate=Stáhnout nejnovější verzi
+login.button.downloadPreparing=Připrava stahování
+login.button.downloadProgress=Stahování {0,number,0%}
+login.withEmailWarning=Pro přihlášení prosím použij svoji přezdívku a ne email.
+vault.next=Další
+vault.previous=Předchozí
+vault.currentPage=Strana\: {0,number,\#}
+mapVault.recommended=Nejlepší výběr M&M týmu
+settings.chat.addAutoJoinChannel=Přidat kanál
+settings.chat.removeAutoJoinChannel=Odebrat
+settings.chat.autoJoinChannelPrompt=Vstoupit do kanálu (\#jméno_kanálu)
+game.player.globalRating=Globální rating jednoho z hráčů
+userInfo.foe=Tento hráč je Tvůj nepřítel
+userInfo.friend=Tento hráč je Tvůj přítel
+map.id=\#{0}
+mapGenerator.generationFailed=Během vytváření mapy nastala chyba
+help.title=Přehled odkazů
+linksTecHelpDiscord=Technická podpora na Discordu
+linksTecHelpForum=Technická podpora na fóru
+linksRules=Pravidla
+linksDiscord=Discord
+linksFacebook=Facebook
+linksDevNews=Vývojářský blog
+linksYoutube=YouTube
+mapVault.upload.rules=Potvrzuji, že jsem si přečetl(a) pravidla pro nahrávání map.
+mapVault.upload.openRules=Zobrazit pravidla
+gameQuality.undefined=-
+chat.userContext.kickGame=Vykopnout ze hry...
+chat.userContext.kickLobby=Vykopnout z loby...
+moderator.ban.reason=důvod banu
+moderator.ban.duration=délka banu
+moderator.ban.success=úspěšně vykopnut a zabanován
+moderator.ban.user=Zabanovat uživatele "{0}"
+main.tutorials=Návody
+tutorial.category=kategorie
+tutorial.tutorial=Návody
+tutorial.launch=Spustit návody
+tutorial.mapName=Název mapy\: {0}
+tutorial.launchFailed=Spouštění návodu selhalo
+tutorial.loading=Načítání návodů
+settings.giveFeedback=Otevřít
+game.ratingRange=Rozsah ratingu
+game.averageRating=Ø rating
+replay.durationTooltip=Skutečný čas
+replay.replayDurationTooltip=Délka záznamu
+replay.playerCountTooltip=Hrácí
+replay.ratingTooltip=Průměrný rating
+replay.qualityTooltip=Kvalita
+mod.uploader.login=Autor
+replay.ignoreMapNotFound=Ignorovat a spustit záznam
+replay.abortAfterMapNotFound=Zrušit a zobrazit více informací
+replay.mapDownloadFailed=Selhalo stahování mapy pro tento záznam
+map.unknown=neznámý
