--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -579,14 +579,11 @@ settings.account.confirmPassword.mismatch=The new password and the confirmation 
 settings.account.changePassword.changing=Your password is being changed…
 settings.account.changePassword.success=Your password was changed.
 settings.account.changePassword.error=Your password was not changed due to an error ({0}).
-settings.account.steamAccount=Steam Account Linking
-settings.account.steamAccount.prompt=You can link your steam account here.
-settings.account.steamAccount.linkToSteam=Link to steam
+settings.account.goWebsite=For most account related activities you need to visit our website
+settings.account.goWebsiteButton=Visit Faforever website
 settings.account.username=FAF Username
 settings.account.username.change=Change username
-
 urlPreviewDescription={0} ({1})
-
 achievement.unlockedTitle=Achievement unlocked!
 friend.nowOnlineNotification.title={0} is now online
 friend.nowOnlineNotification.action=Click here to start a conversation.
