--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -656,7 +656,7 @@ ranked1v1.queuePopTimer=Игра через {0,number,0}\:{1,number,00}
 game.create.generatedMap=Сгенерировать карту
 game.avgRating.format={0,number,\#}
 game.mapGeneration.notification.title=Карта генерируется...
-game.mapGeneration.notification.message=Ожадайте. (Version\: {0}, Seed\: {1})
+game.mapGeneration.notification.message=Ожидайте. (Version\: {0}, Seed\: {1})
 game.mapGeneration.failed.title=Генерация карты не удалась.
 game.mapGeneration.failed.message=Запрошенная карта не может быть сгенерирована, процесс создания карты не завершился в срок. Останавливаем.
 game.mapGeneration.downloadGenerator.title=Загрузка генератора карт версии {0}
