Add own Replays Fixes #1602

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -301,6 +301,7 @@ vault.liveReplays=Live Replays
 vault.replays.loading=Loading replays…
 vault.replays.newest=Most Recent
 vault.replays.highestRated=Highest Rated
+vault.replays.ownReplays=Your replays
 vault.replays.displayQuery=Display search query
 vault.replays.queryPrompt=Build a query above or enter one manually
 vault.replays.searchError=An error has occurred while searching for replays.
@@ -735,9 +736,10 @@ mapDir.changed.oneDrive=We detected you use OneDrive for your documents and move
 settings.use.secondaryVaultLocation=Use Fallback vault location. You want to use this if map/mod downloading has issues and the game does not find maps/mods.
 settings.use.advancedIceLog=Write an into an extra file advanced information about the ice adapter.
 help.title=Links Overview
+# Even tho shown as not used the following messages are used
+linksRules=Rules
 linksTecHelpDiscord=Technical help on Discord
 linksTecHelpForum=Technical help on forum
-linksRules=Rules
 linksModerationReport=Moderation Report Form
 linksDiscord=Discord
 linksFacebook=Facebook
