Consider id as Number
Fixes #1553

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -376,6 +376,7 @@ map.size=Size
 map.rating=Rating
 map.players=Players
 map.version=Version
+map.versionId=Map version ID
 map.versionFormat=v{0}
 map.folderName=Folder name
 map.ranked=Ranked
