Always ask for game path (#1595)
Fixes #1594

Fixes #1355

Fixes #1100

Fixes #1614  

* fixed hash function for supcom.exe (#1614)

Co-authored-by: Slothologist <rfeldh@gmail.com>

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -668,15 +668,18 @@ map.created=Created:
 modType.ui=Ui mod
 modType.sim=Sim mod
 menu.connect=Connecting
-gameChosen.invalidPath=Invalid path
-gameChosen.couldNotLocatedGame=The specified location does not contain a valid Supreme Commander: Forged Alliance installation.
+gameSelect.select.invalidPath=Invalid path
+gamePath.select.noneChosen=You did not select a game location!
+gamePath.select.noValidExe=The specified location does not contain a valid Supreme Commander.exe and is therefore is no valid Forged Alliance installation.
+gamePath.select.vanillaGameSelected=The specified location is a vanilla installation, you need to select the extension Supreme Commander Forged Alliance.
+gamePath.select.fafDataSelected=The specified location is the Forged Alliance Forever game data directory, please select the Forged Alliance installation instead.
+gamePath.select.error=Something went wrong selecting game path
 userInfo.statistics.errorLoading=Could not load statistics
 settings.general.unitDatabase=Unit database
 unitDatabase.rackover=Rackover
 unitDatabase.spooky=Spooky
 game.player.globalRating=One of the player's global ratings
 game.player.ladderRating=One of the player's ladder ratings
-
 mapVault.ladder=Ladder maps
 news.showLadderMaps=Show ladder maps
 ranked1v1.showMaps=Show ladder maps
