Add lobby server login via OAuth token Fixes #1533

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -293,7 +293,13 @@ login.replayServerHost=Replay server host
 login.ircServerHost=IRC server host
 login.apiBaseUrl=API base URL
 login.withEmailWarning=Please login with your username and not your email.
-
+login.remember.never=Don't remember me
+login.remember.short=Remember me short (safe)
+login.remember.forever=Remember me forever (unsafe)
+login.remember.migrate.title=You are using an insecure way to remember your password
+login.remember.migrate.message=You can either stay with the unsafe way that will remember your password forever. When doing so attackers could possibly read out your password if gaining access to you machine. You better change to a more secure way of remembering you, however that will require you to regularly reenter your password.
+login.remember.migrate.stayUnsafe=Use unsafe way
+login.remember.migrate.goSafe=Use safe way and reenter password regularly
 vault.maps=Maps
 vault.mods=Mods
 vault.onlineReplays=Online Replays
@@ -759,3 +765,5 @@ replay.ignoreMapNotFound=Ignore and start replay
 replay.abortAfterMapNotFound=Abort and show more info
 replay.mapDownloadFailed=Map download failed for this replay
 replay.mapDownloadFailed.wannaContinue=We could not find the map mentioned in the replay file. However the game might still know where to find it. Consider this as a warning, that this replay might be broken.
+session.expired.title=You are being logged out because your session expired
+session.expired.message=We are sorry for any inconvenience, please log in again. This log out happens to improve security. A sessions can only last a certain time.(Nothing lasts forever)
