--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -174,16 +174,16 @@ game.ratingFormat.minMax = {0,number,\#} - {1,number,\#}
 game.joinGameRatingConfirmation.title = Rating nicht im definierten Bereich
 game.joinGameRatingConfirmation.text = Dieses Spiel ist für Spieler mit einem Rating zwischen {0,number,\#} und {1,number,\#}, dein Rating ist allerdings {2,number,\#}.\n\nWillst du dennoch beitreten?
 game.type = Typ
-game.mods = Mods
-game.players.format = {0,number,\#}/{1,number,\#}
-game.detail.players.format = {0,number,\#}/{1,number,\#} Spieler
-game.join = Beitreten
-game.cancel = Abbrechen
-game.host = Host
-game.tooltip.teamTitle = Team {0} ({1,number,\#})
-game.tooltip.teamTitleNoTeam = Kein Team
-game.tooltip.observers = Zuschauer
-game.join.passwordPrompt = Passwort eingeben
+game.mods=Mods
+game.players.format={0,number,\#}/{1,number,\#}
+game.detail.players.format={0,number,\#}/{1,number,\#} Spieler
+game.join=Beitreten
+game.cancel=Abbrechen
+game.host=Host
+game.tooltip.teamTitle=Team {0} ({1,number,\#})
+game.tooltip.teamTitleNoTeam=Kein Team
+game.tooltip.observers=Zuschauer
+game.join.passwordPrompt=Passwort eingeben
 game.join.passwordWrong=Falsches Passwort
 game.start.couldNotStart=Das Spiel konnte nicht gestartet werden. Siehe Fehlermeldung unten.
 game.full=Spiel ist voll
@@ -206,16 +206,16 @@ game.victoryCondition=Siegesbedingung
 game.player.id=Spieler-ID
 game.player.username=Name des Spielers
 game.player.faction=Fraktion des Spielers
-game.player.team = Team des Spielers
-game.player.startSpot = Startposition des Spielers
-game.player.score = Punktezahl des Spielers
-game.host.id = Spieler-ID des Hosts
-game.host.username = Name des Hosts
-game.map.height = Kartenhöhe
-game.map.width = Kartenbreite
-game.map.version = Kartenversion
-game.map.folderName = Name des Kartenverzeichnisses
-game.map.isRanked = Karte ist gewertet
+game.player.team=Team des Spielers
+game.player.startSpot=Startposition des Spielers
+game.player.score=Punktezahl des Spielers
+game.host.id=Spieler-ID des Hosts
+game.host.username=Name des Hosts
+game.map.height=Kartenhöhe
+game.map.width=Kartenbreite
+game.map.version=Kartenversion
+game.map.folderName=Name des Kartenverzeichnisses
+game.map.isRanked=Karte ist gewertet
 game.map.displayName = Kartenname
 game.options = Spieloptionen
 game.optionKey = Option
@@ -384,33 +384,33 @@ achievements.loading = Lade Errungenschaften…
 achievements.unlocked = Freigeschaltet ({0,number,\#})
 achievements.locked = Offen ({0,number,\#})
 replayServer.listeningFailed = Replay-Server konnte nicht auf Port {0,number,\#} gestartet werden
-replayServer.retry = Erneut versuchen
-replayServer.unreachable = Replay-Server ist nicht erreichbar, Spiel kann nicht aufgezeichnet werden
-corruptedMods.notification = Mod ist beschädigt und konnte nicht geladen werden\: {0}.
-corruptedMods.show = Anzeigen
-corruptedReplayFiles.notification = Es gibt beschädigte Replays auf deiner Festplatte. Diese wurden für dich in ein anderes Verzeichnis verschoben.
-corruptedReplayFiles.show = Anzeigen
-mapNotFound = Die Karte ''{0}'' konnte weder auf dem Server noch auf diesem Computer gefunden werden.
-replayCouldNotBeStarted = Replay {0,number,\#} konnte nicht gestartet werden. Siehe unten stehende Fehlermeldung.
-liveReplayCouldNotBeStarted = Live-Replay konnte nicht gestartet werden. Siehe unten stehende Fehlermeldung.
-duration.seconds = {0,number,\#}s
-duration.minutesSeconds = {0,number,\#}min {0,number,\#}s
-duration.hourMinutes = {0,number,\#}h {0,number,\#}min
+replayServer.retry=Erneut versuchen
+replayServer.unreachable=Replay-Server ist nicht erreichbar, Spiel kann nicht aufgezeichnet werden
+corruptedMods.notification=Mod ist beschädigt und konnte nicht geladen werden\: {0}.
+corruptedMods.show=Anzeigen
+corruptedReplayFiles.notification=Es gibt beschädigte Replays auf deiner Festplatte. Diese wurden für dich in ein anderes Verzeichnis verschoben.
+corruptedReplayFiles.show=Anzeigen
+mapNotFound=Die Karte ''{0}'' konnte weder auf dem Server noch auf diesem Computer gefunden werden.
+replayCouldNotBeStarted=Replay {0,number,\#} konnte nicht gestartet werden. Siehe unten stehende Fehlermeldung.
+liveReplayCouldNotBeStarted=Live-Replay konnte nicht gestartet werden. Siehe unten stehende Fehlermeldung.
+duration.seconds={0,number,\#}s
+duration.minutesSeconds={0,number,\#}min {1,number,\#}s
+duration.hourMinutes={0,number,\#}h {1,number,\#}min
 # suppress inspection "TrailingSpacesInProperty"
 vsSeparator=\ vs 
 # suppress inspection "TrailingSpacesInProperty"
 textSeparator=, 
 secondsAgo=Vor {0,number,\#} Sekunden
-minuteAgo = Vor {0,number,\#} Minute
-minutesAgo = Vor {0,number,\#} Minuten
-hourAgo = Vor {0,number,\#} Stunde
-hoursAgo = Vor {0,number,\#} Stunden
-dayAgo = Vor {0,number,\#} Tag
-daysAgo = Vor {0,number,\#} Tagen
-monthAgo = Vor {0,number,\#} Monat
-monthsAgo = Vor {0,number,\#} Monaten
-yearAgo = Vor {0,number,\#} Jahr
-yearsAgo = Vor {0,number,\#} Jahren
+minuteAgo=Vor {0,number,\#} Minute
+minutesAgo=Vor {0,number,\#} Minuten
+hourAgo=Vor {0,number,\#} Stunde
+hoursAgo=Vor {0,number,\#} Stunden
+dayAgo=Vor {0,number,\#} Tag
+daysAgo=Vor {0,number,\#} Tagen
+monthAgo=Vor {0,number,\#} Monat
+monthsAgo=Vor {0,number,\#} Monaten
+yearAgo=Vor {0,number,\#} Jahr
+yearsAgo=Vor {0,number,\#} Jahren
 settings.languages.restart.message = Du hast die Sprache geändert. Dies erfordert einen Neustart.
 # Message key and English translation say "Restart", German means "Close".
 # Fuzzy
@@ -565,29 +565,29 @@ search.sort.descending = absteigend
 query.contains = beinhaltet
 search.sort = Sortiere nach
 vault.mods.searchError = Mods konnten nicht geladen werden
-noDateAvailable = Kein Datum verfügbar
-map.created = Erstellt\:
-modType.ui = Ui Mod
-modType.sim = Sim Mod
-menu.connect = Verbinde
-gameChosen.invalidPath = Ungültiger Pfad
-gameChosen.couldNotLocatedGame = Das gewählte Verzeichnis beinhaltet keine gültige Supreme Commander\: Forged Alliance Installation.
-userInfo.statistics.errorLoading = Konnte Statistiken nicht laden
-settings.general.unitDatabase = Unit database
-unitDatabase.rackover = Rackover
+noDateAvailable=Kein Datum verfügbar
+map.created=Erstellt\:
+modType.ui=Ui Mod
+modType.sim=Sim Mod
+menu.connect=Verbinde
+gameChosen.invalidPath=Ungültiger Pfad
+gameChosen.couldNotLocatedGame=Das gewählte Verzeichnis beinhaltet keine gültige Supreme Commander\: Forged Alliance Installation.
+userInfo.statistics.errorLoading=Konnte Statistiken nicht laden
+settings.general.unitDatabase=Unit database
+unitDatabase.rackover=Rackover
 unitDatabase.spooky=Spooky
 game.player.rating=Eins der Spieler-Ratings
 mapVault.ladder=Ladder maps
-news.showLadderMaps = Zeige mir 1v1 Karten
-ranked1v1.showMaps = Zeige mir 1v1 Karten
+news.showLadderMaps=Zeige mir 1v1 Karten
+ranked1v1.showMaps=Zeige mir 1v1 Karten
 # There is this "port" and another "settings.fa.gamePort". What's the difference?
-port = Port
-login.serverHost = Server Host
-login.replayServerHost = Replayserver Host
-login.apiBaseUrl = API Basis-URL
-games.showModdedGames = Zeige Spiele mit Mods
-chat.userContext.copyUsername = Kopiere Benutzernamen
-userInfo.idleTimeFormat = Zuletzt gesehen\: {0}
+port=Port
+login.serverHost=Server Host
+login.replayServerHost=Replayserver Host
+login.apiBaseUrl=API Basis-URL
+games.showModdedGames=Zeige Spiele mit Mods
+chat.userContext.copyUsername=Kopiere Benutzernamen
+userInfo.idleTimeFormat=Zuletzt gesehen\: {0}
 map.playCount = Anzahl Spiele
 # Bin persönlich der Meinung, dass gewisse Begriffe nicht übersetzt werden sollten/müssen.
 # # Kann auch `Heruntergeladen` sein, allerdings ist Downloads simpler und besser meiner Meinung nach.
@@ -608,16 +608,16 @@ settings.chat.chatFormat.extended = Erweitert
 settings.chat.chatFormat.compact = Kompakt
 game.create.onlyFriends = Nur Freunden anzeigen
 unknown = unbekannt
-dateWithTime = {0} um {1}
-main.tournaments = Turniere
-tournament.name = Name
-tournament.status.finished = Beendet
-tournament.status.running = In Ausführung
+dateWithTime={0} um {1}
+main.tournaments=Turniere
+tournament.name=Name
+tournament.status.finished=Beendet
+tournament.status.running=In Ausführung
 # Fuzzy
-tournament.status.openForRegistration = Offen
+tournament.status.openForRegistration=Offen
 # Fuzzy
-tournament.status.closedForRegistration = Registrierung abgeschlossen
-tournament.noStartingDate = Beginn unbekannt
+tournament.status.closedForRegistration=Registrierung abgeschlossen
+tournament.noStartingDate=Beginn unbekannt
 tournament.noCompletionDate=Nicht abgeschlossen
 loading=Lädt...
 updater.readingFileList=Lese Dateiliste
@@ -695,6 +695,7 @@ settings.use.secondaryVaultLocation=Benutzte einen alternativen Ort für Karten 
 help.title=Linksammelung
 linksTecHelpDiscord=Hilfe auf Discord
 linksTecHelpForum=Hilfe im Forum
+# Even tho shown as not used the following messages are used
 linksRules=Regeln
 linksModerationReport=Moderationsforumlar
 linksDiscord=Discord
