rearranged and reworded menu dropdown list

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -31,11 +31,11 @@ userMenu.showProfile=Show profile
 menu.feedback=Feedback
 menu.exit=Exit
 menu.settings=Settings
-menu.revealMapFolder=Reveal map folder
-menu.revealLogFolder=Reveal log folder
-menu.revealModFolder=Reveal mod folder
-menu.revealReplayFolder=Reveal replay folder
-menu.revealGamePrefsFile=Reveal game.prefs file
+menu.revealMapFolder=Show map folder
+menu.revealLogFolder=Show log folder
+menu.revealModFolder=Show mod folder
+menu.revealReplayFolder=Show replay folder
+menu.revealGamePrefsFile=Show game.prefs file
 
 main.community.news=News
 main.chat=Chat
