--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -179,9 +179,10 @@ game.create.disconnected=Please connect
 game.create.map=Map
 game.create.title=Title (required)
 game.create.password=Password (optional)
-game.create.randomMap=Random map
-game.create.generatedMap=Generate map
-game.create.defaultGameType=Select default
+game.create.randomMap=Select random map
+game.create.generatedMap=Generate new map
+game.create.generatedMapNew=NEW
+game.create.defaultGameTypeMarker=(default)
 game.create.rating=Desired rating
 game.create.deselectAll=Deselect all
 game.create.reload=Reload
