Ask user for tab to start
User is asked what tab he wants to start in instead of taking last tab as starting point.
Fixes #1723

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -37,7 +37,7 @@ menu.revealModFolder=Show mod folder
 menu.revealReplayFolder=Show replay folder
 menu.revealGamePrefsFile=Show game.prefs file
 
-main.community.news=News
+main.news=News
 main.chat=Chat
 main.play=Play
 main.vault=Vault
@@ -523,7 +523,7 @@ settings.giveFeedback=Open
 settings.windowTitle=Settings
 settings.general=General
 settings.language=Language
-settings.general.rememberLastTab=Remember my last opened tab
+settings.general.startTab=Select the tab to starts at
 settings.chat=Chat
 settings.chat.maxMessages=Message history size
 settings.chat.previews=Preview
@@ -738,7 +738,7 @@ mapDir.changed.noneAscii=We detected you have a username with special characters
 mapDir.changed.unix=We detected you have a unix system and moved your vault directory to fallback location.
 mapDir.changed.oneDrive=We detected you use OneDrive for your documents and moved your vault directory to fallback location.
 settings.use.secondaryVaultLocation=Use Fallback vault location. You want to use this if map/mod downloading has issues and the game does not find maps/mods.
-settings.use.advancedIceLog=Write an into an extra file advanced information about the ice adapter.
+settings.use.advancedIceLog=Write advanced information into an extra file about the ice adapter.
 help.title=Links Overview
 # Even tho shown as not used the following messages are used
 linksRules=Rules
@@ -759,3 +759,9 @@ replay.ignoreMapNotFound=Ignore and start replay
 replay.abortAfterMapNotFound=Abort and show more info
 replay.mapDownloadFailed=Map download failed for this replay
 replay.mapDownloadFailed.wannaContinue=We could not find the map mentioned in the replay file. However the game might still know where to find it. Consider this as a warning, that this replay might be broken.
+startTab.selectTab=Select the tab to start at:
+startTab.message=Here you can select the tab your client starts in. You can change that later in the setting if you want.
+startTab.title=Select start tab
+startTab.save=Save
+startTab.wantToConfigure=Select the tab to start at:
+startTab.configure=Configure
