--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -722,6 +722,7 @@ gamePath.select.error=Something went wrong selecting game path
 userInfo.statistics.errorLoading=Could not load statistics
 settings.general.unitDatabase=Unit Database
 settings.general.unitDatabase.description=The community implemented multiple unit databases, which are named by their creators. Choose the one to use in the unit database.
+settings.general.cacheLifeTime=Cache downloaded files for (in days)
 unitDatabase.rackover=Rackover
 unitDatabase.spooky=Spooky
 game.player.globalRating=One of the player's global ratings
