restructure TMM ui

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -102,10 +102,11 @@ teammatchmaking.title=Team matchmaking
 teammatchmaking.invitePlayer=Invite player
 teammatchmaking.invite=Invite
 teammatchmaking.availableQueues=Available queues
+teammatchmaking.chat=Chat / Map pool?
+teammatchmaking.statistics=Statistics / Chat?
 teammatchmaking.leaveQueue=Leave queue
 teammatchmaking.rating=Rating: {0,number,#}
 teammatchmaking.gameCount=Games: {0,number,#}
-teammatchmaking.kickPlayer=Kick from party
 teammatchmaking.notification.invite.title=Invited to party
 teammatchmaking.notification.invite.message={0} has invited you to join their party
 teammatchmaking.notification.invite.join=Join
